--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@radix-ui/react-label": "^2.1.2",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "@tabler/icons-react": "^3.30.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-js": "^1.2.3",
     "framer-motion": "^12.5.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.476.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.12.2",
     "motion": "^12.4.10",
-    "next": "15.2.0",
+    "next": "^15.2.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -32,6 +39,7 @@
     "react-slideshow-image": "^4.3.2",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.1",
+    "stripe": "^17.7.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
