updated API's for FrontEnd

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@heroui/date-picker": "^2.3.16",
+    "@heroui/react": "^2.7.5",
+    "@heroui/system": "^2.4.12",
+    "@heroui/theme": "^2.4.12",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@radix-ui/react-label": "^2.1.2",
@@ -20,7 +24,8 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.5.0",
+    "firebase": "^11.5.0",
+    "framer-motion": "^12.6.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.476.0",
     "mongodb": "^6.15.0",
