--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@radix-ui/react-label": "^2.1.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-js": "^6.1.0",
     "@tabler/icons-react": "^3.30.0",
@@ -38,6 +39,7 @@
     "react-dom": "^19.0.0",
     "react-element-to-jsx-string": "^17.0.0",
     "react-multi-carousel": "^2.8.5",
+    "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
     "react-slideshow-image": "^4.3.2",
