--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-js": "^6.1.0",
     "@tabler/icons-react": "^3.30.0",
+    "antd": "^5.24.7",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,6 +39,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-element-to-jsx-string": "^17.0.0",
+    "react-hook-form": "^7.55.0",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
