--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-js": "^6.1.0",
     "@tabler/icons-react": "^3.30.0",
+    "antd": "^5.24.8",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +30,7 @@
     "framer-motion": "^12.6.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.476.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.2",
     "motion": "^12.4.10",
