--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-js": "^6.1.0",
     "@tabler/icons-react": "^3.30.0",
+    "@tap-payments/card-sdk": "^1.0.2",
     "antd": "^5.24.8",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
