--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.55.0",
     "react-multi-carousel": "^2.8.5",
     "react-otp-input": "^3.1.1",
+    "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
